--- a/partials/blog-contato.html
+++ b/partials/blog-contato.html
@@ -1,4 +1,4 @@
-<div class="blog-contato">
+<div class="blog-contato post-article">
 	<h3><span class="label label-default">Contato</span></h3>
 	<span class="text-danger" ng-if="message.length > 3">{{message}}</span>
 	<form class="form" name="myForm" ng-submit="enviar()" ng-controller="Contato">
